@@ -5,52 +5,65 @@ import org.springframework.context.annotation.Configuration;
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
 import org.springframework.security.config.annotation.web.configuration.EnableWebSecurity;
 import org.springframework.security.config.http.SessionCreationPolicy;
+import org.springframework.security.core.userdetails.User;
+import org.springframework.security.core.userdetails.UserDetailsService;
 import org.springframework.security.crypto.bcrypt.BCryptPasswordEncoder;
 import org.springframework.security.crypto.password.PasswordEncoder;
+import org.springframework.security.provisioning.InMemoryUserDetailsManager;
 import org.springframework.security.web.SecurityFilterChain;
 import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
-import java.util.List;
+import java.util.Arrays;
 
 @Configuration
 @EnableWebSecurity
 public class SecurityConfig {
 
-    // ✅ PasswordEncoder bean
     @Bean
     public PasswordEncoder passwordEncoder() {
         return new BCryptPasswordEncoder();
     }
 
-    // ✅ Security filter chain
     @Bean
     public SecurityFilterChain securityFilterChain(HttpSecurity http) throws Exception {
         http
             .cors().and()
             .csrf().disable()
+            .sessionManagement().sessionCreationPolicy(SessionCreationPolicy.STATELESS).and()
             .authorizeHttpRequests(auth -> auth
-                .requestMatchers("/api/**").permitAll()              // All API endpoints open
-                .requestMatchers("/favicon.ico").permitAll()         // Favicon
-                .requestMatchers("/**/*.html").permitAll()           // Static HTML files
-                .requestMatchers("/**/*.js").permitAll()             // Static JS files
-                .requestMatchers("/**/*.css").permitAll()            // Static CSS files
-                .anyRequest().authenticated()                        // Everything else requires authentication
-            )
-            .sessionManagement()
-                .sessionCreationPolicy(SessionCreationPolicy.STATELESS); // Stateless sessions
+                // API endpoints
+                .requestMatchers("/api/**").permitAll()
+                // Static resources
+                .requestMatchers("/login.html", "/trade.html", "/favicon.ico").permitAll()
+                .requestMatchers("/js/**", "/css/**").permitAll()
+                // Everything else requires authentication
+                .anyRequest().authenticated()
+            );
 
         return http.build();
     }
 
-    // ✅ CORS configuration
+    @Bean
+    public UserDetailsService userDetailsService() {
+        // Optional: In-memory user for testing (remove in production)
+        User.UserBuilder users = User.withDefaultPasswordEncoder();
+        var user = users
+            .username("admin")
+            .password("password")
+            .roles("USER")
+            .build();
+        return new InMemoryUserDetailsManager(user);
+    }
+
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
-        configuration.setAllowedOrigins(List.of("*"));                       // Allow all origins
-        configuration.setAllowedMethods(List.of("GET", "POST", "PUT", "DELETE", "OPTIONS"));
-        configuration.setAllowedHeaders(List.of("*"));
+        // Adjust origins based on your front-end setup
+        configuration.setAllowedOrigins(Arrays.asList("http://localhost:8080", "null"));
+        configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE"));
+        configuration.setAllowedHeaders(Arrays.asList("*"));
         configuration.setAllowCredentials(true);
 
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
